# fe

./: Cargo.toml  README.md
example/: config.toml  open_url.py  printargs.py
src/: cli.rs  command.rs  commands.rs  config.rs  events.rs  fe.rs  main.rs
src/fe/: diagnostic.rs  draw.rs  fe.rs  files.rs  mod.rs  style.rs
src/fe/draw/: file.rs
src/fe/render/: files.rs
src/storage/: mod.rs
src/utils/: dir.rs  mod.rs  term.rs
