[package]
name = "fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
directories = "5.0.1"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
home = "0.5.9"
serde = "1.0.203"
sled = "0.34.7"
tempfile = "3.10.1"
structopt = "0.3"
structopt-derive = "0.4"
toml = "0.5"
winapi = "0.3.9"
